added calls from controller to service
