# swagger_server/models/student.py
@@ -15,11 +15,11 @@ class Student(Model):
 
     Do not edit the class manually.
     """
-    def __init__(self, student_id: str=None, first_name: str=None, last_name: str=None, grade_records: List[GradeRecord]=None):  # noqa: E501
+    def __init__(self, student_id: int=None, first_name: str=None, last_name: str=None, grade_records: List[GradeRecord]=None):  # noqa: E501
         """Student - a model defined in Swagger
 
         :param student_id: The student_id of this Student.  # noqa: E501
-        :type student_id: str
+        :type student_id: int
         :param first_name: The first_name of this Student.  # noqa: E501
         :type first_name: str
         :param last_name: The last_name of this Student.  # noqa: E501
@@ -28,7 +28,7 @@ class Student(Model):
         :type grade_records: List[GradeRecord]
         """
         self.swagger_types = {
-            'student_id': str,
+            'student_id': int,
             'first_name': str,
             'last_name': str,
             'grade_records': List[GradeRecord]
@@ -57,25 +57,23 @@ class Student(Model):
         return util.deserialize_model(dikt, cls)
 
     @property
-    def student_id(self) -> str:
+    def student_id(self) -> int:
         """Gets the student_id of this Student.
 
 
         :return: The student_id of this Student.
-        :rtype: str
+        :rtype: int
         """
         return self._student_id
 
     @student_id.setter
-    def student_id(self, student_id: str):
+    def student_id(self, student_id: int):
         """Sets the student_id of this Student.
 
 
         :param student_id: The student_id of this Student.
-        :type student_id: str
+        :type student_id: int
         """
-        if student_id is None:
-            raise ValueError("Invalid value for `student_id`, must not be `None`")  # noqa: E501
 
         self._student_id = student_id
 
